--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <section class="game">
+
         <div class="score">
             <div class="player-score">
                 <h2>Player</h2>
@@ -21,9 +22,16 @@
                 <p>0</p>
             </div>
         </div>
+
         <div class="intro">
             <h1>Rock Paper and Scissors</h1>
             <button>Let's Play</button>
+        </div>
+
+        <div class="playerName fadeOut">
+            <h1>Type your name</h1>
+            <input type="text" id="playerName">
+            <button id="submitName">Play Game!</button>
         </div>
 
         <div class="match fadeOut">
