--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 
         </div>
 
+        <div class="gameOver fadeOut">
+            <h1>Game Over!</h1>
+            <p>Computer Won :(</p>
+            <button>Play Again</button>
+        </div>
+
     </section>
 
 
