little changes, added comments to code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="intro">
             <h1>Rock Paper and Scissors</h1>
             <button>Let's Play</button>
+            <p class="mt-4">Some rules</p>
+            <ul>
+                <li>It's just a simple rock, paper and scissors game</li>
+                <li>Game ends with three wins</li>
+                <li>Good Luck and Have Fun :)</li>
+            </ul>
         </div>
 
         <div class="playerName fadeOut">
