--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock Paper and Scissors</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
@@ -27,25 +27,19 @@
         <div class="intro">
             <h1>Rock Paper and Scissors</h1>
             <button>Let's Play</button>
-            <p class="mt-4">Some rules</p>
-            <ul>
-                <li>It's just a simple rock, paper and scissors game</li>
-                <li>Game ends with three wins</li>
-                <li>Good Luck and Have Fun :)</li>
-            </ul>
         </div>
 
         <div class="playerName fadeOut">
             <h1>Type your name</h1>
             <input type="text" id="playerName">
-            <button id="submitName">Play Game!</button>
+            <button id="submitName">Play</button>
         </div>
 
         <div class="match fadeOut">
             <h2 class="winner">Choose an option</h2>
             <div class="hands">
-                <img src="./assets/rock.png" alt="" class="player-hand">
-                <img src="./assets/rock.png" alt="" class="computer-hand">
+                <img src="rock.png" alt="" class="player-hand">
+                <img src="rock.png" alt="" class="computer-hand">
             </div>
             <div class="options">
                 <button class="rock">rock</button>
@@ -63,6 +57,6 @@
 
     </section>
 
-    <script src="./js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
